style(front): #1710 welcome view styles
Former-commit-id: cdb9c8ee4373ea71f4929d78c31b432f7c33cf83

--- a/front/src/scenes/Registration/containers/WelcomeView/index.css
+++ b/front/src/scenes/Registration/containers/WelcomeView/index.css
@@ -9,3 +9,15 @@
   padding-top: 10%;
   width: 350px;
 }
+
+:local .row {
+  padding-bottom: 20px;
+}
+
+:local .imgDiv {
+  padding-bottom: 50px;
+}
+
+:local .img {
+  padding-bottom: 30px;
+}
