--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -36,7 +36,7 @@
                 alt="Young hacker smiling">
             </label>
           </div>
-          <nav class="h-50-l relative tc t-30 ty-50 ">
+          <nav class="h-50 relative tc t-30 ty-50 ">
             <ul class="o-40 menu-trans dib h-100 list ma0 pa0 relative tl w5">
               <div class="products-menu h-maxcontent">
                 <li class="db pb2">
