--- a/new/theme/2020/templates/use-cases/feature.html
+++ b/new/theme/2020/templates/use-cases/feature.html
@@ -38,7 +38,7 @@
 
 {% block content %}
 <div class="bg-graylight flex-ns flex-wrap-ns justify-between-m bg-banner-sz coverm cover-s h-auto">
-	<div class="ph5-ns ma-auto mw9 w-100-ns w-90 pv4-ns pv3">
+	<div class="ph5-ns ma-auto mw9 w-100-ns w-90 pv4-ns pt3 pb4">
 		<a class="feature-button-l roboto fw1 fl f3-ns f5 no-underline c-fluid-bk"
 			 href="{{ SITEURL }}/use-cases/{{ page.category }}/">
 				<img
@@ -67,10 +67,10 @@
 			alt="Young hacker smiling">
 		</div>
 		<div class="fl-l w-50-l w100-m w90-s center">
-			<div class="roboto f1-l f2-m f3 b lh3 pt0-l pt3">
+			<div class="roboto f1-l f2 b lh-solid pt0-l pt3">
 				{{ page.title }}
 			</div>
-			<div class="roboto fw1 f3-l f4-m f5 lh3">
+			<div class="roboto fw1 f3-l f4 lh-2">
 				{{ page.content }}
 			</div>
 		</div>
