fix(front): #3296 menu alignment to he center
Former-commit-id: 5cd49a928de1d10bad6bd2aa6726e8be2409df46

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -31,12 +31,12 @@
           <div class="mw9 tr ml-auto mr-auto ph3">
             <label for="op" class="mr5-l right-small">
               <img
-                class="lower-img w2-l w1 mv4-l pv2-l mv3 pv-4-m right-small pointer"
+                class="lower-img w2-l w1 mv4-l pv2-l mv3 pv-4-m right-0 pointer z-100 relative"
                 src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/cross.png"
                 alt="Young hacker smiling">
             </label>
           </div>
-          <nav class="h-50 relative tc t-30 ty-50 ">
+          <nav class="h-auto tc t-50 ty-50 absolute right-0 left-0 pv4 mh-100">
             <ul class="o-40 menu-trans dib h-100 list ma0 pa0 relative tl w5">
               <div class="products-menu h-maxcontent">
                 <li class="db pb2">
@@ -226,7 +226,7 @@
               </li>
               <li>
                 <!-- social media -->
-                <div class="divsocial flex justify-center pt4 pb3">
+                <div class="divsocial tl flex pt4 pb3">
                   <a class="pr3" href="https://twitter.com/fluidattacks">
                     <img class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/twitter.png"
                       alt="Twitter logo">
