fix(front): #3300 padding in contact section
Former-commit-id: d32b193bd71bad0c1c216e2e196fae57967d550b

--- a/new/theme/2020/templates/contact-us.html
+++ b/new/theme/2020/templates/contact-us.html
@@ -30,7 +30,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="mw9 flex flex-wrap ml-auto mr-auto pt4-l pt3">
+<div class="mw9 flex flex-wrap ml-auto mr-auto pt4-l">
   <div class="w-50-l w-100">
     <div class="slideshow-container">
       <div class="slideshow-inner">
