fix(front): #3303 link for blog entries
Former-commit-id: 51124d63c645b209051ebc97b8ab1faa65c861c9

--- a/new/theme/2020/templates/thank-you.html
+++ b/new/theme/2020/templates/thank-you.html
@@ -163,7 +163,7 @@
         </div>
         <div class="w36-l ml-auto mr-auto">
           <div class="dib tc w-100-s w-100-m pv3 fr-l">
-            <a class="no-underline b roboto" href="#">
+            <a class="no-underline b roboto" href="{{ SITEURL }}/blog/">
               <span class="br2 ph5 pv-bt bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer mt2">
                 Read Last Blog Entry
               </span>
