--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -193,7 +193,7 @@
       src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/datasheet-integrates.png"
       alt="Young hacker smiling">
       <h1 class="c-lightblack f2-l fw7 tc f3 center roboto">
-        Want to know more about Fluid Attacks?
+        Do you want to know more about Integrates?
       </h1>
       <h2 class="f2-l fw1 tc f4 w6-ns center roboto w-90">
         Download Data Sheet  <span><a href="#"><img class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></a></span>
