fix(front): #3313 update continuous hacking text
Former-commit-id: 864ae7d8c6b6b57609f8156030701f59b474d8e4

--- a/new/theme/2020/templates/use-cases/continuous.html
+++ b/new/theme/2020/templates/use-cases/continuous.html
@@ -139,7 +139,7 @@
 <div class="pb5 db-ns dn">
   <div>
     <h2 class="f2-l fw1 tc-ns tl f3 w6-ns center roboto w-90">
-      Contact Us Today. We Give You a Free Demo
+      Contact Us Now.
     </h2>
   </div>
   <div class="tc">
