fix(front): #3318 update oneshot hacking text
Former-commit-id: 5f3090154ab522e79cb071aff2d7b1045ae29715

--- a/new/theme/2020/templates/use-cases/one-shot.html
+++ b/new/theme/2020/templates/use-cases/one-shot.html
@@ -138,7 +138,7 @@
 <div class="pb5 db-ns dn">
   <div>
     <h2 class="f2-l fw1 tc-ns tl f3 w6-ns roboto center w-90">
-      Make Your One-Shot Hacking Today
+      Start Your One-Shot Hacking Project Today
     </h2>
   </div>
   <div class="tc">
