fix(front): #3325 update contact us subtitle
Former-commit-id: 9962134287399ebd11d4057b3633e1cd7a9b8276

--- a/new/theme/2020/templates/contact-us.html
+++ b/new/theme/2020/templates/contact-us.html
@@ -64,7 +64,7 @@
   <div class="tc w-50-l w-100 items-center justify-center flex">
     <div class="pv0-l pv5 ph0-l ph2">
       <h1 class="neue fw7 c-fluid-bk f1-l f-title-s f-title-m ma0">{{ page.title }}</h1>
-      <h2 class="roboto fw1 f4 ma0">and Start Solving your Vulnerabilities Now!</h2>
+      <h2 class="roboto fw1 f4 ma0">Start Solving your Vulnerabilities Now!</h2>
     </div>
   </div>
 </div>
