feat(cross): #2090.5 add month picker
Former-commit-id: d9f5c6e77d6c13fe238afec9616acb2c3e531c71

--- a/front/src/scenes/Dashboard/containers/ProjectAuthorsView/index.css
+++ b/front/src/scenes/Dashboard/containers/ProjectAuthorsView/index.css
@@ -1,3 +1,13 @@
 :local .wrapped {
   word-wrap: break-word;
 }
+
+:local .dateCol {
+  padding-bottom: 10px;
+}
+
+:local .selectDate {
+  width: 155px;
+  height: 35px;
+  background-color: white;
+}
