feat(front): #3336 add security to menu and footer
Former-commit-id: 7066cda2ef634668b7b3ff1cf7a6c8e111ffa6d5

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -168,6 +168,10 @@
         href="#" >
           Newsletter
         </a><br>
+        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+        href="{{ SITEURL }}/security/" >
+          Security
+        </a><br>
       </div>
     </div>
   </div>
