--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -152,8 +152,14 @@
                   </div>
                 </li>
               </div>
+              <li class="db h2">
+                <a href="{{ SITEURL }}/security/"
+                   class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
+                  Security
+                </a>
+              </li>
               <li class="db h2 mb5">
-                <a href="#"
+                <a href="{{ SITEURL }}/blog/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
                   Blog
                 </a>
