fix(front): #3339 more padding in menu
Former-commit-id: f484cf685393450ee1addeda0ece523bca478df8

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -39,7 +39,7 @@
           <nav class="h-auto tc t-50 ty-50 absolute right-0 left-0 pv4 mh-100">
             <ul class="o-40 menu-trans dib h-100 list ma0 pa0 relative tl w5">
               <div class="products-menu h-maxcontent">
-                <li class="db pb2">
+                <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="products-title">
                   <label for="products-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
                     Products <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
@@ -69,7 +69,7 @@
                 </li>
               </div>
               <div class="usecases-menu h-maxcontent">
-                <li class="db pb2">
+                <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="usecases-title">
                   <label for="usecases-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
                     Use Cases <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
@@ -93,7 +93,7 @@
                 </li>
               </div>
               <div class="aboutus-menu h-maxcontent">
-                <li class="db pb2">
+                <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="aboutus-title">
                   <label for="aboutus-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
                     About Us <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
@@ -152,26 +152,26 @@
                   </div>
                 </li>
               </div>
-              <li class="db h2">
+              <li class="db pb3">
                 <a href="{{ SITEURL }}/security/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
                   Security
                 </a>
               </li>
-              <li class="db h2 mb5">
+              <li class="db pb3 mb5">
                 <a href="{{ SITEURL }}/blog/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
                   Blog
                 </a>
               </li>
-              <li class="db h2">
+              <li class="db pb3">
                 <a href="{{ SITEURL }}/contact-us/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
                   Contact
                 </a>
               </li>
               <div class="aboutus-menu h-maxcontent">
-                <li class="db pb2">
+                <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="careers-title">
                   <label for="careers-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
                     Careers <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
@@ -218,13 +218,13 @@
                   </div>
                 </li>
               </div>
-              <li class="db h2">
+              <li class="db pb3">
                 <a href="#"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
                   FAQ
                 </a>
               </li>
-              <li class="db h2">
+              <li class="db pb3">
                 <a href="https://community.fluidattacks.com/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
                   Community
