--- a/new/theme/2020/templates/tag.html
+++ b/new/theme/2020/templates/tag.html
@@ -3,17 +3,28 @@
 {% block meta %}
   <meta name="description"
         content="Here you can find all the articles of the blog which are related to the
-        category {{ category.name|replace('-', ' ')|capitalize }}. The articles are ordered according to their publishing date and may
+        tag {{ tag|capitalize }}. The articles are ordered according to their publishing date and may
         address different subjets related to the field of Information Security.">
   <meta name="keywords"
-        content="Article, Category, Blog, Information, Security, Date">
+        content="Article, Tag, Blog, Information, Security, Date">
 {% endblock meta %}
 
-{% block title %}{{ category.name|replace("-", " ")|capitalize }} | {{ AUTHOR }}{% endblock %}
+{% block title %}
+  {% set TITLE = 0 %}
+  {% if DEFAULT_LANG == "en" %}
+    {% if tag.name|length < 20 %}
+{{ tag|capitalize }} | {{ SITENAME }}
+      {% set TITLE = 1 %}
+    {% endif %}
+  {% endif %}
+  {% if TITLE == 0 %}
+{{ tag|capitalize }} | {{ AUTHOR }}
+  {% endif %}
+{% endblock %}
 
 {% block canonical %}
-<link rel="canonical"
-      href="{{ SITEURL }}/blog/">
+  <link rel="canonical"
+        href="{{ SITEURL }}/blog/">
 {% endblock canonical %}
 
 {% block breadcrumb %}
@@ -38,14 +49,14 @@
         </li>
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
-             href="{{ SITEURL }}/blog/categories/">
-            Categories
+             href="{{ SITEURL }}/blog/tags/">
+            Tags
           </a>
           <span class="c-fluid-gray v-mid b"> / </span>
         </li>
         <li class="dib mt0">
           <a class="white hover-white no-underline"
-             href=".">{{ category.name|replace("-", " ")|capitalize }}
+             href=".">{{ tag }}
           </a>
         </li>
       </ul>
