fix(front): #3346 add styles for fluid qanda
Former-commit-id: 47e40c9e86d41fb5acf7bc6b66c378e4ead9d11a

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -579,3 +579,8 @@ video {
   max-height: 0;
   transition: max-height .2s ease-out;
 }
+
+.fluid-qanda ol li {
+  font-style: italic;
+  list-style-type: none;
+}
