--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -1,6 +1,6 @@
-<div class="b relative w-100 z-5 h4-l mw9 mr-auto ml-auto">
+<div class="b relative w-100 z-5 mw9 mr-auto ml-auto">
   <div class="cssmenu bg-white lh-solid h-menu-s cover shadow-menu">
-    <ul class="list ma0 pa0 overflow-hidden h4">
+    <ul class="list ma0 pa0 overflow-hidden">
       <li class="fl">
         <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
           <img class="w5-l w-logo ml5-l ml3 mv2 absolute"
