fix(front): #3283 fix people table
Former-commit-id: 3d1b842ef21f2f9309212775a94155ed7b2a37a8

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -401,6 +401,15 @@ $codeyellow: rgba(230, 219, 116, 1);
 
 // Styles for articles
 
+
+.tb-ppl {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  white-space: nowrap;
+  width: max-content;
+}
+
 .internal {
   font-weight: 600;
   text-align: left;
@@ -419,13 +428,6 @@ $codeyellow: rgba(230, 219, 116, 1);
   }
   .listingblock {
     padding-top: 2rem;
-  }
-
-  .tb-ppl {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    white-space: nowrap;
   }
 
   code.hljs {
