--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
     <style> body { background-color: #272727; }</style>
   </head>
   <body id="FluidIntegrates">
-    <iframe hidden></iframe><iframe hidden></iframe><iframe hidden></iframe>
+    <iframe title="Frame 1" hidden></iframe><iframe title="Frame 2" hidden></iframe><iframe title="Frame 3" hidden></iframe>
     <div id="root"></div>
     {% if 'localhost' in request.get_host and debug %}
       <script src="https://localhost:3000/dashboard/login-bundle.min.js" type="text/javascript"></script>
