--- a/new/theme/2020/templates/products/forces.html
+++ b/new/theme/2020/templates/products/forces.html
@@ -156,9 +156,11 @@
       <h1 class="c-lightblack f2-l fw7 tc f3 center roboto">
         Do you want to know more about Forces?
       </h1>
-      <h2 class="f2-l fw1 tc f4 w6-ns center roboto w-90">
-        Download Data Sheet  <span><a href="#"><img class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></a></span>
-      </h2>
+      <a class="no-underline c-fluid-bk" href="#">
+        <button class="f2-l fw1 tc f4 center roboto download-btn bg-transparent bn pointer">
+          Download Data Sheet  <span><img class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></span>
+        </button>
+      </a>
     </div>
 </div>
 {% assets output="static/js/progressBar.min.js", "js/tmp/progressBar.min.js" %}
