fix(front): #3299 hide footer in contact page
Former-commit-id: 305e4be38ef6847d400237f2d90d6a537e41dc99

--- a/new/theme/2020/templates/contact-us.html
+++ b/new/theme/2020/templates/contact-us.html
@@ -30,7 +30,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="mw9 flex flex-wrap ml-auto mr-auto pt4-l">
+<div class="mw9 flex flex-wrap ml-auto mr-auto pt4-l contact-page">
   <div class="w-50-l w-100">
     <div class="slideshow-container">
       <div class="slideshow-inner">
@@ -68,7 +68,7 @@
     </div>
   </div>
 </div>
-<div class="pb6 mw9 ml-auto mr-auto flex">
+<div class="pb6-ns pb4 mw9 ml-auto mr-auto flex">
   <div class="w-50-l db-l dn">
     <p class="roboto tl fw1 f4 lh-2 mr-auto ml-auto w36-l">
       Since 2001, <b class="fw7">Fluid Attacks</b> has been developing cybersecurity<br>
