feat(front): #3366 add benefit to integrates
Former-commit-id: be70257f00eefcf201fb4affc22d7371afa65759

--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -109,6 +109,7 @@
           your application. <br>
           <br>
           <br>
+          <br>
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib">
@@ -120,6 +121,7 @@
           to manage the vulnerabilities and reach a<br>
           high fixing rate. <br>
           <br>
+          <br>
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib">
@@ -129,6 +131,7 @@
         <p class="roboto fw1 c-lightblack f5 lh-2">
           See the details of each detected<br>
           vulnerability. <br>
+          <br>
           <br>
           <br>
         </p>
@@ -142,6 +145,19 @@
           security risks for their timely <br>
           remediation. <br>
           <br>
+          <br>
+        </p>
+    </div>
+    <div class="item-carousel mh4 pa0 dib">
+      <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-8.png"
+        alt="Young hacker smiling">
+        <p class="roboto fw1 c-lightblack f5 lh-2">
+          Fluid Attacks has available the Integrates-App <br>
+          (on Android and iOS) for executive control<br>
+          of processes. It shows you the most crucial<br>
+          indicator: vulnerability remediation rate on<br>
+          your tested systems.
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib">
@@ -152,7 +168,8 @@
           With the API Key the users can <br>
           integrate our app with their existing <br>
           products using a common query language <br>
-          for modern APIs (GraphQL).
+          for modern APIs (GraphQL).<br>
+          <br>
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib">
@@ -162,6 +179,7 @@
         <p class="roboto fw1 c-lightblack f5 lh-2">
           Request verification of treatments and <br>
           documentation from your security team. <br>
+          <br>
           <br>
           <br>
         </p>
@@ -174,7 +192,8 @@
           Establish quick communication with and <br>
           receive important notifications from <br>
           Fluid Attacks' team <br>
-          (when you purchase Drills).
+          (when you purchase Drills). <br>
+          <br>
         </p>
     </div>
   </div>
