fix(front): #3291 fix breadcrumb links
- This also fix the categories in the breadcrumb for people subpages


Former-commit-id: 0e53c242ac96f3d40b0f956e7021b43caa484e90

--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -89,10 +89,11 @@
           <span class="c-fluid-gray v-mid b"> / </span>
           {% endif %}
         </li>
-        {% if page.category2 %}
+        {% if page.peoplepage %}
           <li class="dib mt0" >
-            <a href="{{ SITEURL }}/{{ page.category.name }}/{{ page.category2 }}/">
-                {{ page.category2|replace('-', ' ') }}
+            <a class="c-fluid-gray hover-white no-underline"
+               href="{{ SITEURL }}/{{ page.category.name }}/people/">
+                People
             </a>
             <span class="c-fluid-gray v-mid b"> / </span>
           </li>
