--- a/new/theme/2020/templates/use-cases/feature.html
+++ b/new/theme/2020/templates/use-cases/feature.html
@@ -70,7 +70,7 @@
 			<div class="roboto f1-l f2 b lh-solid pt0-l pt3">
 				{{ page.title }}
 			</div>
-			<div class="roboto fw1 f3-l f4 lh-2">
+			<div class="roboto fw1 f3-l f4 lh-2 feature-content">
 				{{ page.content }}
 			</div>
 		</div>
