feat(front): #3319 create faq page
Former-commit-id: fd8f6485b1f335c34db4bd16f0f0d5230148b496

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -153,7 +153,7 @@
           Blog
         </a><br>
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-        href="#" >
+        href="{{ SITEURL }}/faq/" >
           FAQ
         </a><br>
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
