--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -219,7 +219,7 @@
                 </li>
               </div>
               <li class="db pb3">
-                <a href="#"
+                <a href="{{ SITEURL }}/faq/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
                   FAQ
                 </a>
