feat(front): #3322 create newsletter page
Former-commit-id: 317a80c0beab6421025a61d00dc414e73960c565

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -165,7 +165,7 @@
           Contact
         </a><br>
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-        href="#" >
+        href="{{ SITEURL }}/subscription/" >
           Newsletter
         </a><br>
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
