feat(front): #3365 add button to asserts page
Former-commit-id: eac8369bcb27e2631002b87ddf50eb318fa100e6

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -602,3 +602,11 @@ video {
   list-style-type: none;
 }
 
+.button-asserts {
+  a {
+    color: white;
+    &:hover {
+      color: white;;
+    }
+  }
+}
