feat(front): #3364 add comparative page
Former-commit-id: da6f4a47231159f42994166a32fa2e0419c4b0bc

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -49,6 +49,10 @@
           href="{{ SITEURL }}/use-cases/one-shot/">
           One-shot Hacking
         </a><br>
+        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+          href="{{ SITEURL }}/about-us/comparative/">
+          Comparative
+        </a><br>
       </div>
     </div>
     <div class="pt4-l b dib v-top tl mh2">
