fix(cross): #3387.1 change page slugs
- Changed slug for continuous and oneshot hacking pages


Former-commit-id: 4fb4c138e3b9fe496fa3e908196b44330b02b91e

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -250,7 +250,7 @@
         <li class="pt4-l">
           <div class="dib">
             <a class="no-underline pr4 b roboto dib-l dn"
-               href="{{ SITEURL }}/use-cases/continuous/">
+               href="{{ SITEURL }}/use-cases/continuous-hacking/">
               <span class="br2 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd ph4 pv2 bt-trans c-dkred pointer mt2">
                 Learn More
               </span>
@@ -287,7 +287,7 @@
         <li class="pt4-l">
           <div class="dib">
             <a class="no-underline pr4 b roboto dib-l dn"
-               href="{{ SITEURL }}/use-cases/one-shot/">
+               href="{{ SITEURL }}/use-cases/one-shot-hacking/">
               <span class="br2 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd ph4 pv2 bt-trans c-dkred pointer mt2">
                 Learn More
               </span>
