--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -78,13 +78,13 @@
                     <ul class="list">
                       <li class="pv2">
                         <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
-                           href="{{ SITEURL }}/use-cases/continuous/">
+                           href="{{ SITEURL }}/use-cases/continuous-hacking/">
                           Continuous Hacking
                         </a>
                       </li>
                       <li class="pv2">
                         <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
-                           href="{{ SITEURL }}/use-cases/one-shot/">
+                           href="{{ SITEURL }}/use-cases/one-shot-hacking/">
                            One-shot Hacking
                           </a>
                       </li>
