--- a/new/theme/2020/templates/use-cases/continuous.html
+++ b/new/theme/2020/templates/use-cases/continuous.html
@@ -53,12 +53,12 @@
   <nav>
     <a
       class="c-lightblack f6 roboto fw4 pointer no-underline bb mr3"
-      href="{{ SITEURL }}/use-cases/continuous/">
+      href="{{ SITEURL }}/use-cases/continuous-hacking/">
       Continuous Hacking
     </a>
     <a
       class="c-fluid-gray f6 roboto no-underline fw4 hv-fluid-bk pointer link"
-      href="{{ SITEURL }}/use-cases/one-shot/">
+      href="{{ SITEURL }}/use-cases/one-shot-hacking/">
       One-Shot Hacking
     </a>
   </nav>
@@ -76,7 +76,7 @@
   <div class="carousel overflow-y-hidden overflow-x-auto w-auto pa2 nowrap pv5"
        id="carousel">
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/continuous/hacking-techniques/">
+      <a href="{{ SITEURL }}/use-cases/continuous-hacking/hacking-tech/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-1.png"
@@ -84,7 +84,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/continuous/healthcheck/">
+      <a href="{{ SITEURL }}/use-cases/continuous-hacking/healthcheck/">
         <img
           class="pb5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-2.png"
@@ -92,7 +92,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/continuous/environments/">
+      <a href="{{ SITEURL }}/use-cases/continuous-hacking/environments/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-3.png"
@@ -100,7 +100,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/continuous/vuln-management/">
+      <a href="{{ SITEURL }}/use-cases/continuous-hacking/vuln-manage/">
         <img
           class="pb5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-4.png"
@@ -108,7 +108,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/continuous/mock-attacks/">
+      <a href="{{ SITEURL }}/use-cases/continuous-hacking/mock-attacks/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-5.png"
@@ -116,7 +116,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/continuous/remediation/">
+      <a href="{{ SITEURL }}/use-cases/continuous-hacking/remediation/">
         <img
           class="pb5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-6.png"
@@ -124,7 +124,7 @@
       </a>
     </div>
     <div class="item-carousel ml6 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/continuous/critical-information/">
+      <a href="{{ SITEURL }}/use-cases/continuous-hacking/critical-info/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-7.png"
