--- a/new/theme/2020/templates/use-cases/one-shot.html
+++ b/new/theme/2020/templates/use-cases/one-shot.html
@@ -52,12 +52,12 @@
   <nav>
     <a
       class="c-fluid-gray f6 roboto no-underline fw3 hv-fluid-bk pointer link mr3"
-      href="{{ SITEURL }}/use-cases/continuous/">
+      href="{{ SITEURL }}/use-cases/continuous-hacking/">
       Continuous Hacking
     </a>
     <a
       class="c-lightblack f6 roboto fw3 pointer no-underline bb"
-      href="{{ SITEURL }}/use-cases/one-shot/">
+      href="{{ SITEURL }}/use-cases/one-shot-hacking/">
       One-Shot Hacking
     </a>
   </nav>
@@ -75,7 +75,7 @@
   <div class="carousel overflow-y-hidden overflow-x-auto w-auto pa2 nowrap pv5"
        id="carousel">
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/one-shot/hacking-techniques/">
+      <a href="{{ SITEURL }}/use-cases/one-shot-hacking/hacking-tech/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-1.png"
@@ -83,7 +83,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/one-shot/environments/">
+      <a href="{{ SITEURL }}/use-cases/one-shot-hacking/environments/">
         <img
           class="pb5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-3.png"
@@ -91,7 +91,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/one-shot/vuln-management/">
+      <a href="{{ SITEURL }}/use-cases/one-shot-hacking/vuln-management/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-4.png"
@@ -99,7 +99,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/one-shot/coverage/">
+      <a href="{{ SITEURL }}/use-cases/one-shot-hacking/coverage/">
         <img
           class="pb5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/one-shot/one-shot-4.png"
@@ -107,7 +107,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/one-shot/infection/">
+      <a href="{{ SITEURL }}/use-cases/one-shot-hacking/infection/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/one-shot/one-shot-5.png"
@@ -115,7 +115,7 @@
       </a>
     </div>
     <div class="item-carousel mh6 pr3 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/one-shot/reports/">
+      <a href="{{ SITEURL }}/use-cases/one-shot-hacking/reports/">
         <img
           class="pb5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/one-shot/one-shot-6.png"
@@ -123,7 +123,7 @@
       </a>
     </div>
     <div class="item-carousel ml6 pa0 dib">
-      <a href="{{ SITEURL }}/use-cases/one-shot/critical-information/">
+      <a href="{{ SITEURL }}/use-cases/one-shot-hacking/critical-info/">
         <img
           class="pt5"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/use-cases/continuous/continuous-7.png"
