--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -38,15 +38,15 @@
     <div class="pt4-l b dib v-top tl mh2">
       <div class="lh-2">
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-          href="{{ SITEURL }}/use-cases/continuous/" >
+          href="{{ SITEURL }}/use-cases/continuous-hacking/" >
           Use Cases
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/use-cases/continuous/">
+          href="{{ SITEURL }}/use-cases/continuous-hacking/">
           Continuous Hacking
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/use-cases/one-shot/">
+          href="{{ SITEURL }}/use-cases/one-shot-hacking/">
           One-shot Hacking
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
