fix(cross): #3387.2 add comparative to use cases
Former-commit-id: 66f1235fb792574a92aad25be2bf395b1cb05d8e

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -50,7 +50,7 @@
           One-shot Hacking
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/about-us/comparative/">
+          href="{{ SITEURL }}/use-cases/comparative/">
           Comparative
         </a><br>
       </div>
