feat(front): #3305 add datasheet files in products
Former-commit-id: 3ad2c02319d768d485a0ddc3a77bd352ad3bf04e

--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -214,7 +214,7 @@
       <h1 class="c-lightblack f2-l fw7 tc f3 center roboto">
         Do you want to know more about Integrates?
       </h1>
-      <a class="no-underline c-fluid-bk" href="#">
+      <a class="no-underline c-fluid-bk" href="https://fluidattacks.docsend.com/view/ymup7742z3wkkzex">
         <button class="f2-l fw1 tc f4 center roboto download-btn bg-transparent bn pointer">
           Download Data Sheet  <span><img class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></span>
         </button>
