--- a/new/theme/2020/templates/products/forces.html
+++ b/new/theme/2020/templates/products/forces.html
@@ -156,7 +156,7 @@
       <h1 class="c-lightblack f2-l fw7 tc f3 center roboto">
         Do you want to know more about Forces?
       </h1>
-      <a class="no-underline c-fluid-bk" href="#">
+      <a class="no-underline c-fluid-bk" href="https://fluidattacks.docsend.com/view/utsh7u7hdef453fw">
         <button class="f2-l fw1 tc f4 center roboto download-btn bg-transparent bn pointer">
           Download Data Sheet  <span><img class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></span>
         </button>
